* Added -D to display full comments (suggested by Jamis Buck).
* The rake program will set the status value used in any explicit
  exit(n) calls. (patch provided by Stephen Touset)
* Fixed error in functional tests that were not including session (and
  silently skipping the functionl tests.
* Removed --usage and make -h the same as -H.

== Version 0.7.3

* Added existing and existing! methods to FileList
* FileLists now claim to be Arrays (via is_a?) to get better support
  from the FileUtil module.
* Added init and top_level for custom rake applications.

== Version 0.7.2

* Error messages are now send to stderr rather than stdout (from
  Payton Quackenbush).
* Better error handling on invalid command line arguments (from Payton
  Quackenbush).
* Added rcov task and updated unit testing for better code coverage.
* Fixed some bugs where the application object was going to the global
  appliation instead of using its own data.
* Added square and curly bracket patterns to FileList#include (Tilman
  Sauerbeck). 
* Added plain filename support to rule dependents (suggested by Nobu
  Nakada). 
* Added pathmap support to rule dependents.
* Added a 'tasks' method to a namespace to get a list of tasks
  associated with the namespace.
* Fixed the method name leak from FileUtils (bug found by Glenn
  Vanderburg). 
* Added rake_extension to handle detection of extension collisions.
* Added test for noop, bad_option and verbose flags to sh command.
* Removed dependency on internal fu_xxx functions from FileUtils.
* Added a 'shame' task to the Rakefile.
* Added tar_command and zip_command options to the Package task.
* Added a description to the gem task in GemPackageTask.
* Fixed a bug when rules have multiple prerequisites (patch by Joel
  VanderWerf)
* Added a protected 'require "rubygems"' to test/test_application to
  unbreak cruisecontrol.rb.
* Added the handful of RakeFileUtils to the private method as well.
* Added block based exclusion.