@@ -4,6 +4,7 @@ Send suggestions for this list to mailto:jim@weirichhouse.org or on
 the rake-devel@rubyforge.org mailing list.
 
 === To Do
+* Need a nice API for accessing tasks in namespaces, namespaces in an app, etc.
 * Provide a way to disable -w warning mode.
 * Define a set of default rules that work in the absense of any Rakefile
 * What about cyclic dependencies?
